# rust-uniffi-expr

./: build.gradle  settings.gradle
app/: build.gradle
app/libs/shared_lib/: Cargo.toml  build.rs  buildSwiftModule.sh  libshared_lib.dylib  shared_lib.dylib  shared_lib.swiftmodule  swift_module.abi.json  swift_module.swiftdoc  swift_module.swiftsourceinfo  uniffi.toml
app/libs/shared_lib/src/: lib.rs  shared_lib.swift  shared_lib.udl  shared_libFFI.h
app/libs/shared_lib/src/uniffi/shared_lib/: shared_lib.kt
app/src/androidTest/java/com/example/rustshreadlibrary/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/uniffi/shared_lib/: shared_lib.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rustshreadlibrary/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
