[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]
name = "shared_lib"

[dependencies]
uniffi = "0.17.0"
uniffi_macros = "0.17.0"

[build-dependencies]
uniffi_build = "0.17.0"